// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTable Component - Light Theme Dark Theme should match the snapshot 1`] = `
.c0 {
  overflow-x: auto;
  width: 100%;
}

.c0 table {
  width: 100%;
  border-collapse: collapse;
}

.c0 table .ellipsis {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 table .ellipsis-sm {
  width: 18.75rem;
}

.c0 table .ellipsis-xs {
  width: 9.375rem;
}

.c0 table th,
.c0 table td {
  height: 3rem;
  padding: 0 0.5rem 0 0;
  text-align: left;
}

.c0 table th:last-child,
.c0 table td:last-child {
  text-align: right;
  padding: 0;
}

.c0 table th {
  color: #89A7CE;
  font-weight: 600;
}

.c0 table tr {
  border-bottom: 0.0625rem solid #21497D;
}

.c0 table tr:last-child {
  border-bottom: none;
}

<div>
  <div
    class="c0"
  >
    <table>
      <thead>
        <tr>
          <th>
            Header 1
          </th>
          <th>
            Header 2
          </th>
          <th>
            Header 3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Row 1 Cell 1
          </td>
          <td>
            Row 1 Cell 2
          </td>
          <td>
            Row 1 Cell 3
          </td>
        </tr>
        <tr>
          <td>
            Row 2 Cell 1
          </td>
          <td>
            Row 2 Cell 2
          </td>
          <td>
            Row 2 Cell 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CustomTable Component - Light Theme Light Theme should match the snapshot 1`] = `
.c0 {
  overflow-x: auto;
  width: 100%;
}

.c0 table {
  width: 100%;
  border-collapse: collapse;
}

.c0 table .ellipsis {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 table .ellipsis-sm {
  width: 18.75rem;
}

.c0 table .ellipsis-xs {
  width: 9.375rem;
}

.c0 table th,
.c0 table td {
  height: 3rem;
  padding: 0 0.5rem 0 0;
  text-align: left;
}

.c0 table th:last-child,
.c0 table td:last-child {
  text-align: right;
  padding: 0;
}

.c0 table th {
  color: #828282;
  font-weight: 600;
}

.c0 table tr {
  border-bottom: 0.0625rem solid #E0E0E0;
}

.c0 table tr:last-child {
  border-bottom: none;
}

<div>
  <div
    class="c0"
  >
    <table>
      <thead>
        <tr>
          <th>
            Header 1
          </th>
          <th>
            Header 2
          </th>
          <th>
            Header 3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Row 1 Cell 1
          </td>
          <td>
            Row 1 Cell 2
          </td>
          <td>
            Row 1 Cell 3
          </td>
        </tr>
        <tr>
          <td>
            Row 2 Cell 1
          </td>
          <td>
            Row 2 Cell 2
          </td>
          <td>
            Row 2 Cell 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
